--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </activity>
 
         <activity android:name=".CheckoutActivity" />
+        <activity android:name=".ThankYouActivity" />
 
     </application>
 
